# marketing-kit

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.marketing/commands/: brand.md  demand.md  direction-check.md  frame.md  gate.md  inspect.md  lifecycle.md  measure.md  mission.md  research.md  strategy.md
.marketing/memory/: constitution.md
agents/: commander-marketing.md  inspector.md  officer-1-research.md  officer-2-strategy.md  officer-3-brand.md  officer-4-demand.md  officer-5-lifecycle.md  officer-6-measure.md  soldier-95-5-future-memory.md  soldier-ai-synthetic-audience.md  soldier-attribution-diagnostics.md  soldier-brand-architecture-equity.md  soldier-brand-tracking-penetration.md  soldier-budget-balance.md  soldier-category-entry-points.md  soldier-content-seo.md  soldier-conversion-cro.md  soldier-creator-influencer.md  soldier-emotional-creative.md  soldier-esov-sov.md  soldier-first-party-cdp.md  soldier-full-funnel-paid-media.md  soldier-incrementality.md  soldier-jtbd.md  soldier-lead-scoring-lifecycle.md  soldier-lifecycle-crm-email.md  soldier-market-sizing.md  soldier-mental-availability.md  soldier-mmm.md  soldier-narrative-story.md  soldier-persona-segmentation.md  soldier-plg.md  soldier-porter-5-forces.md  soldier-positioning.md  soldier-retention-loyalty.md  soldier-revops-alignment.md  soldier-stp.md  soldier-value-prop-design.md
docs/: RESEARCH.md
marketing_cli/: __init__.py  cli.py  integrations.py  runner_bridge.py  scaffolder.py
marketing_kit/: __init__.py  commander.py  inspector.py  mission.py  models.py  web.py
marketing_kit/officers/: officer_1_research.py  officer_2_strategy.py  officer_3_brand.py  officer_4_demand.py  officer_5_lifecycle.py  officer_6_measure.py
marketing_kit/soldiers/: soldier_95_5_future_memory.py  soldier_ai_synthetic_audience.py  soldier_attribution_diagnostics.py  soldier_brand_architecture_equity.py  soldier_brand_tracking_penetration.py  soldier_budget_balance.py  soldier_category_entry_points.py  soldier_content_seo.py  soldier_conversion_cro.py  soldier_creator_influencer.py  soldier_emotional_creative.py  soldier_esov_sov.py  soldier_first_party_cdp.py  soldier_full_funnel_paid_media.py  soldier_incrementality.py  soldier_jtbd.py  soldier_lead_scoring_lifecycle.py  soldier_lifecycle_crm_email.py  soldier_market_sizing.py  soldier_mmm.py  (+10 more)
tests/: test_cli.py  test_mission_harness.py  test_structure.py  test_web.py
(+30 files in other folders)
