[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-kit"
version = "0.1.0"
description = "Marketing-Kit — a generalist, sector-agnostic marketing agent army (OpenAI Agents SDK port), portable with the Claude agents/skills mirror."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["openai-agents"]

[project.optional-dependencies]
dev = ["pytest"]
# Provider-agnostic FREE web-search backends (pick one via MK_SEARCH). Brain model is separate.
gemini = ["google-genai"]    # Gemini grounding   — free 1.5k/day (GEMINI_API_KEY)
tavily = ["tavily-python"]   # Tavily, LLM-clean  — free 1k/mo (TAVILY_API_KEY)
ddg = ["ddgs"]               # DuckDuckGo         — free, no key (unofficial)
# Non-OpenAI providers (Anthropic, Gemini, local, …) for the Python runtime,
# via MK_ELITE_MODEL / MK_STANDARD_MODEL = "litellm/<provider>/<model>".
litellm = ["openai-agents[litellm]"]

[project.scripts]
marketing = "marketing_cli.cli:main"
marketing-kit-mission = "marketing_kit.mission:main"

[tool.setuptools.packages.find]
include = ["marketing_kit*", "marketing_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
